--- a/src/assets/icon/iconfont.css
+++ b/src/assets/icon/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 1541584 */
-  src: url('iconfont.woff2?t=1697710138230') format('woff2'),
-       url('iconfont.woff?t=1697710138230') format('woff'),
-       url('iconfont.ttf?t=1697710138230') format('truetype');
+  src: url('iconfont.woff2?t=1699357119281') format('woff2'),
+       url('iconfont.woff?t=1699357119281') format('woff'),
+       url('iconfont.ttf?t=1699357119281') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,26 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-linux:before {
+  content: "\e622";
+}
+
+.icon-glibc:before {
+  content: "\e620";
+}
+
+.icon-gcc:before {
+  content: "\e621";
+}
+
+.icon-cmake:before {
+  content: "\e61d";
+}
+
+.icon-kde:before {
+  content: "\e61f";
 }
 
 .icon-golang:before {
